dataset1235/2025-2/805158916/users/1639372129/executions/2651470117_2819779400.log
== SUBMISSION (2025-08-25 15:15:47)
-- CODE: 
num = float(input("Quantidade de jogos: "))
vu = float(input("Valor unitario: ")) 
vf = float(input("Valor do frete: "))
Q2 = num*vu+vf
print(Q2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Quantidade de jogos: Valor unitario: Valor do frete: 1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Quantidade de jogos: Valor unitario: Valor do frete: 240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Quantidade de jogos: Valor unitario: Valor do frete: 540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Quantidade de jogos: Valor unitario: Valor do frete: 765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Quantidade de jogos: Valor unitario: Valor do frete: 162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Quantidade de jogos: Valor unitario: Valor do frete: 618.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:15:36)
-- CODE: 
num = float(input("Quantidade de jogos: "))
vu = float(input("Valor unitario: ")) 
vf = float(input("Valor do frete: "))
Q2 = num*vu+vf
print(int(Q2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Quantidade de jogos: Valor unitario: Valor do frete: 1642
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Quantidade de jogos: Valor unitario: Valor do frete: 240171
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Quantidade de jogos: Valor unitario: Valor do frete: 540
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Quantidade de jogos: Valor unitario: Valor do frete: 765
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Quantidade de jogos: Valor unitario: Valor do frete: 162
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Quantidade de jogos: Valor unitario: Valor do frete: 618
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:15:43)
-- CODE: 
num = float(input("Quantidade de jogos: "))
vu = float(input("Valor unitario: ")) 
vf = float(input("Valor do frete: "))
Q2 = num*vu+vf
print(Q2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 5
    print(Q2))
             ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 5
    print(Q2))
             ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 5
    print(Q2))
             ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 5
    print(Q2))
             ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 5
    print(Q2))
             ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 5
    print(Q2))
             ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
